--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
             class="fa margin-left-small margin-right-small is-xsmall">></span>About Us</div>
         <div>
           <h1>About Us</h1>
-          <div class="text-medium">Get Your Next <br>Great Prices. Cleaner Cars. For You.</div>
+          <div class="text-medium">Leave the dirt behind.<br><br></div>
         </div>
       </div>
       <div class="col lg-1"></div>
