--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 
         <div>
           <h1>Contact Us</h1>
-          <div class="text-medium">We are always on for you</div>
+          <div class="text-medium">We are always here for you</div>
         </div>
       </div>
       <div class="col lg-1"></div>
@@ -176,8 +176,7 @@
 
 
       <h1>Let&#x27;s talk!</h1>
-      <div class="margin-bottom-double low-text-contrast">Or come and drink coffee in comfy place and hangout with
-        us</div>
+      <div class="margin-bottom-double low-text-contrast"></div>
       <div class="container container-nested">
         <div class="col lg-6">
           <div><span class="text-medium weight-is-medium">Near by?</span><br>‍<br>52 Antares
