--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <div class="size-h2 size-h2-xs margin-bottom">Standard Interior Detail</Details>
           </div>
-          <img src="images/steering-wheel.png" width="75">
+          <img src="images/sedan.png" width="75">
           <span class="margin-left-sm fontsmall">
             Standard Vapour Cleaning
 
@@ -314,7 +314,7 @@
         <div class="slide-with-bg bg5 padding-top-bottom-double hide-bg w-slide">
           <div class="container padding-top-bottom-double">
             <div class="col lg-5 alignself-center md-8 sm-12">
-              <div class="pre-title on-dark"><br><br><br><br><br>>What we do</div>
+              <div class="pre-title on-dark"><br><br><br><br><br>What we do</div>
               <h2 class="size-h2 size-h2-xs margin-bottom-small">Car Sale Service</h2>
               <div class="margin-bottom-2">Proffesional photography package for the sale of your vehicle!</div>
               <h4>Starting at $65</h4>
