--- a/services.html
+++ b/services.html
@@ -128,8 +128,8 @@
 
 
   <div class="services">
-    <div class="textlarge black">Our Services</div>
-    <h1>Interior Services</h1>
+    <div class="textlarge black">Our Packages</div>
+    <h1>Interior Packages</h1>
     <div class="cen">
       <div class="service">
         <i class="fas fa-anchor"></i>
@@ -190,17 +190,17 @@
         <p>
           • Thourough antimicrobial steam hand wash<br>
           • Vacuum interior in detail<br>
-          • Headliner steamed & disinfected<br>
           • Decontamination of windows, mirrors, glass<br>
-          • Door jambs sanitized<br>
           • Trim sanitization and conditioning<br>
+          • Headliner steamed & disinfected<br>
+          • Door jambs sanitized<br>
           • Steam seat stain removal<br>
           • Mats thouroughly cleaned
 
         </p>
       </div>
     </div>
-    <h1>Exterior Services</h1>
+    <h1>Exterior Packages</h1>
     <div class="cen">
       <div class="service">
         <i class="fas fa-anchor"></i>
@@ -236,7 +236,7 @@
           • Exterior + Interior glass cleaned<br>
           • Quick wax<br>
           • Tires dressed & conditioned
-          
+
         </p>
       </div>
 
@@ -262,7 +262,7 @@
     </div>
   </div>
 
-<!--Interior Services-->
+  <!--Interior Services-->
   <div class="services">
     <div class="textlarge2 black"><br>Additional Services</div>
     <h1>Interior Services</h1>
@@ -271,7 +271,7 @@
         <i class="fas fa-anchor"></i>
         <h2>Leather Conditioning</h2>
         <div class="margin-bottom-small">
-          $8 - Any Vehicle
+          $8 Each 
         </div>
         <h4>5 minutes</h4>
         <p>Brings dry and cracked leather back to life! Protects leather from UV rays.</p>
@@ -281,7 +281,7 @@
         <i class="fab fa-android"></i>
         <h2>Puke/Blood</h2>
         <div class="margin-bottom-small">
-          $250.00
+          $250.00 Per Area
         </div>
         <h4>30 minutes</h4>
         <p>Decontamination and steam treatment of affected area.</p>
@@ -301,7 +301,7 @@
         <i class="fas fa-apple-alt"></i>
         <h2>Dog Hair Removal</h2>
         <div class="margin-bottom-small">
-          $45.00
+          $45.00 Per Area
         </div>
         <h4>20 minutes</h4>
         <p>Priced/timed per area. Remove pesky hairs stuck in the carpet!</p>
@@ -309,9 +309,9 @@
 
       <div class="service">
         <i class="fas fa-archway"></i>
-       <h2>Child Seat Sanitization</h2>
+        <h2>Child Seat Sanitization</h2>
         <div class="margin-bottom-small">
-          $15.00
+          $15.00 Each
         </div>
         <h4>5 minutes</h4>
         <p>Priced Per seat. Sanitized with steam. No chemicals needed!</p>
@@ -321,7 +321,7 @@
         <i class="far fa-angry"></i>
         <h2>Salt Removal</h2>
         <div class="margin-bottom-small">
-          $25.00
+          $25.00 Per Area
         </div>
         <h4>5 - 15 minutes</h4>
         <p>Priced/timed per area.<br><br></p>
@@ -331,180 +331,182 @@
 
       <!--Exterior Services-->
       <h1>Exterior Services</h1>
-    <div class="cen">
-      <div class="service">
-        <i class="fas fa-anchor"></i>
-        <h2>Lens Buffing</h2>
-        <div class="margin-bottom-small">
-          $65.00
-        </div>
-        <h4>25 minutes</h4>
-        <p>Buffing headlights that have sun fading and light scratches.</p>
-      </div>
-
-      <div class="service">
-        <i class="fab fa-android"></i>
-        <h2>Headlight Restoration</h2>
-        <div class="margin-bottom-small">
-          $110.00
-        </div>
-        <h4>45 minutes</h4>
-        <p>Restoration and sealant of heavily discolored and scratched lenses.</p>
-      </div>
-
-      <div class="service">
-        <i class="fab fa-angellist"></i>
-        <h2>Engine Shampoo</h2>
-        <div class="margin-bottom-small">
-          $50.00
-        </div>
-        <h4>15 minutes</h4>
-        <p>Shampoo the engine bay to remove dust/debris.</p>
-      </div>
-
-      <div class="service">
-        <i class="fas fa-apple-alt"></i>
-        <h2>Engine Detail</h2>
-        <div class="margin-bottom-small">
-          $75.00
-        </div>
-        <h4>35 minutes</h4>
-        <p>Extensively detail the bay to remove grease. Condition all accessible plastics.</p>
-      </div>
-
-      <div class="service">
-        <i class="fas fa-archway"></i>
-       <h2>Brake Dust Removal</h2>
-        <div class="margin-bottom-small">
-          $15.00
-        </div>
-        <h4>10 minutes</h4>
-        <p>Price per rim. Removes caked on brake dust from face of rim.</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Rim Deep Cleaning</h2>
-        <div class="margin-bottom-small">
-          $60.00
-        </div>
-        <h4>20 minutes</h4>
-        <p>Price per rim. Rim removed from vehicle and detailed.</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Wheel Well Cleaning</h2>
-        <div class="margin-bottom-small">
-          $15.00
-        </div>
-        <h4>10 minutes</h4>
-        <p>Per wheel well. Must be paired with rim deep cleaning.</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Windshield Treatment</h2>
-        <div class="margin-bottom-small">
-          $40.00
-        </div>
-        <h4>10 minutes</h4>
-        <p>Protective hydrophobic coating that repels water and improves visibility in rain. </p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Clay Bar</h2>
-        <div class="margin-bottom-small">
-          $60.00
-        </div>
-        <h4>45 minutes</h4>
-        <p>Remove pollutants hidden in the paint commonly missed by the naked eye</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Carnauba Wax</h2>
-        <div class="margin-bottom-small">
-          $75.00
-        </div>
-        <h4>35 minutes</h4>
-        <p>Application of professional paste hand wax to deepen shine provide basic hydrophobic properties & protect paint.</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Spray on Ceramic Coating</h2>
-        <div class="margin-bottom-small">
-          $110.00
-        </div>
-        <h4>45 minutes</h4>
-        <p>Ceramic spray treatment that provides high levels of hydrophobic properties and prevents contaminants sticking to paint.</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Car Sale Service</h2>
-        <div class="margin-bottom-small">
-          $65.00
-        </div>
-        <h4>45 minutes</h4>
-        <p>10-15 Professional pictures are taken and edited after your detailing of choice!<br><br></p>
-      </div>
-
-    </div>
-  </div>
-
-
-  <div class="section is-dark">
-    <div class="container">
-      <div class="col lg-12">
-        <div class="c-cta1 is-wrapping justifyv-md">
-          <div class="md-margin-bottom">
-            <div class="size-h3 md-text-align-center margin-bottom-2 centermargin">Feel the Vapour Wash</div>
-            <div class="low-text-contrast md-text-align-center"><strong>Count on us to make your next car wash
-                experience the best you’ve ever had.</strong></div>
+      <div class="cen">
+        <div class="service">
+          <i class="fas fa-anchor"></i>
+          <h2>Lens Buffing</h2>
+          <div class="margin-bottom-small">
+            $65.00
           </div>
-          <div class="text-align-center flex-horizontal xs-flexv">
+          <h4>25 minutes</h4>
+          <p>Buffing headlights that have sun fading and light scratches.</p>
+        </div>
 
-            <a data-w-id="92422ac6-ae17-2895-3517-cf5c44bb4638" href="contact.html"
-              class="button-primary button-ghost-on-dark animated-ghost w-inline-block">
-              <div
-                style="-webkit-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:1"
-                class="button-primary-text">Contact us</div>
-              <div
-                style="opacity:0;display:block;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                class="button-primary-text for-hover">let&#x27;s go <span class="fa margin-left"></span></div>
-            </a>
+        <div class="service">
+          <i class="fab fa-android"></i>
+          <h2>Headlight Restoration</h2>
+          <div class="margin-bottom-small">
+            $110.00
+          </div>
+          <h4>45 minutes</h4>
+          <p>Restoration and sealant of heavily discolored and scratched lenses.</p>
+        </div>
+
+        <div class="service">
+          <i class="fab fa-angellist"></i>
+          <h2>Engine Shampoo</h2>
+          <div class="margin-bottom-small">
+            $50.00
+          </div>
+          <h4>15 minutes</h4>
+          <p>Shampoo the engine bay to remove dust/debris.</p>
+        </div>
+
+        <div class="service">
+          <i class="fas fa-apple-alt"></i>
+          <h2>Engine Detail</h2>
+          <div class="margin-bottom-small">
+            $75.00
+          </div>
+          <h4>35 minutes</h4>
+          <p>Extensively detail the bay to remove grease. Condition all accessible plastics.</p>
+        </div>
+
+        <div class="service">
+          <i class="fas fa-archway"></i>
+          <h2>Brake Dust Removal</h2>
+          <div class="margin-bottom-small">
+            $15.00
+          </div>
+          <h4>10 minutes</h4>
+          <p>Price per rim. Removes caked on brake dust from face of rim.</p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Rim Deep Cleaning</h2>
+          <div class="margin-bottom-small">
+            $60.00
+          </div>
+          <h4>20 minutes</h4>
+          <p>Price per rim. Rim removed from vehicle and detailed.</p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Wheel Well Cleaning</h2>
+          <div class="margin-bottom-small">
+            $15.00
+          </div>
+          <h4>10 minutes</h4>
+          <p>Per wheel well. Must be paired with rim deep cleaning.</p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Windshield Treatment</h2>
+          <div class="margin-bottom-small">
+            $40.00
+          </div>
+          <h4>10 minutes</h4>
+          <p>Protective hydrophobic coating that repels water and improves visibility in rain. </p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Clay Bar</h2>
+          <div class="margin-bottom-small">
+            $60.00
+          </div>
+          <h4>45 minutes</h4>
+          <p>Remove pollutants hidden in the paint commonly missed by the naked eye</p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Carnauba Wax</h2>
+          <div class="margin-bottom-small">
+            $75.00
+          </div>
+          <h4>35 minutes</h4>
+          <p>Application of professional paste hand wax to deepen shine provide basic hydrophobic properties & protect
+            paint.</p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Spray on Ceramic Coating</h2>
+          <div class="margin-bottom-small">
+            $110.00
+          </div>
+          <h4>45 minutes</h4>
+          <p>Ceramic spray treatment that provides high levels of hydrophobic properties and prevents contaminants
+            sticking to paint.</p>
+        </div>
+
+        <div class="service">
+          <i class="far fa-angry"></i>
+          <h2>Car Sale Service</h2>
+          <div class="margin-bottom-small">
+            $65.00
+          </div>
+          <h4>45 minutes</h4>
+          <p>10-15 Professional pictures are taken and edited after your detailing of choice!<br><br></p>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="section is-dark">
+      <div class="container">
+        <div class="col lg-12">
+          <div class="c-cta1 is-wrapping justifyv-md">
+            <div class="md-margin-bottom">
+              <div class="size-h3 md-text-align-center margin-bottom-2 centermargin">Feel the Vapour Wash</div>
+              <div class="low-text-contrast md-text-align-center"><strong>Count on us to make your next car wash
+                  experience the best you’ve ever had.</strong></div>
+            </div>
+            <div class="text-align-center flex-horizontal xs-flexv">
+
+              <a data-w-id="92422ac6-ae17-2895-3517-cf5c44bb4638" href="contact.html"
+                class="button-primary button-ghost-on-dark animated-ghost w-inline-block">
+                <div
+                  style="-webkit-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:1"
+                  class="button-primary-text">Contact us</div>
+                <div
+                  style="opacity:0;display:block;-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                  class="button-primary-text for-hover">let&#x27;s go <span class="fa margin-left"></span></div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Nav Bar Last -->
+    <!-- Nav Bar Last -->
 
-  <div class="section section-footer-dark is-dark">
-    <a href="index.html" class="c">
-      <img class="centerimg margin-bottom-2" src="images\VAlogo.png">
-    </a>
-    <div class="container centermargin">
-      <div class="col lg-3 md-12">
-      </div>
-      <div class="col lg-6 md-12 centermargin">
-        <div class=" flexh-space-between md-flex-vertical">
-          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
-          <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
-          <a href="faq.html" class="footer-nav-link is-bold on-dark">FAQ's</a>
-          <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
+    <div class="section section-footer-dark is-dark">
+      <a href="index.html" class="c">
+        <img class="centerimg margin-bottom-2" src="images\VAlogo.png">
+      </a>
+      <div class="container centermargin">
+        <div class="col lg-3 md-12">
+        </div>
+        <div class="col lg-6 md-12 centermargin">
+          <div class=" flexh-space-between md-flex-vertical">
+            <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
+            <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
+            <a href="faq.html" class="footer-nav-link is-bold on-dark">FAQ's</a>
+            <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
+          </div>
+        </div>
+        <div class="col lg-3 md-12">
+          <div class=" md-flexh-justify-start">
+          </div>
         </div>
       </div>
-      <div class="col lg-3 md-12">
-        <div class=" md-flexh-justify-start">
-        </div>
-      </div>
-    </div>
-    <div class=" flexh-justify-center md-flexh-justify-left">
+      <div class=" flexh-justify-center md-flexh-justify-left">
         <div class="low-text-contrast text-small flexh-space-between md-flex-vertical">
           <div class="md-order-last centermargin">© Vapour Auto. All rights reserved.</div>
 
